--- a/SARS_project/templates/SARS/base.html
+++ b/SARS_project/templates/SARS/base.html
@@ -6,6 +6,7 @@
         <title>SARS</title>
 
         <!-- script references -->
+        <!--<script src="{{ STATIC_URL }}JQuery/token.js"></script>-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <script src="{{ STATIC_URL }}JQuery/bootstrap.min.js"></script>
 
