--- a/SARS_project/templates/SARS/document_evaluation.html
+++ b/SARS_project/templates/SARS/document_evaluation.html
@@ -1,31 +1,34 @@
 {% extends 'SARS/base.html' %}
+{% load staticfiles %}
 
-{% block title %} Stage 3 {% endblock %}
+{% block title %} Document Pool {% endblock %}
+
+{% block head_block %}
+    <link href="{{ STATIC_URL }}css/documentCSS.css" rel="stylesheet">
+    <script type="text/javascript" src="{{ STATIC_URL }}JQuery/document_evaluation_script.js"></script>
+{% endblock %}
 
 {% block body_block %}
-    <h1>Select all relevant documents</h1>
-    
-    <!--go back button-->
-    <button onclick="goBack()">Go Back</button>
-    <script>
-        function goBack() {
-        window.history.back();
-        }
-    </script>
+    <h1>Document Pool</h1>
+    <h4>Please tick all the relevant documents. Click the title to view document through external link.</h4>
 
-    <div style="height:1em"></div>
-    <div style="position: relative;text-align: center;height:0.2em;background-color:black"></div>
-    <div style="height:1em"></div>
-    
-    <ol style="font-size: 20px">
-        {%  for ID in documentID  %}
-            <li style="background-color: #f5f5f5;">
-                <p>
-                    <input type="checkbox" name="checkbox" value= "value"/>
-                    <a href="http://www.ncbi.nlm.nih.gov/pubmed/{{ ID }}" target="_blank">
-                        {{ ID }}
-                    </a><br>
-                </p>
+    <div id="ctrl_button">
+        <button id="btn_goBack">Go Back</button>
+        <button id="btn_proceed">Proceed</button>
+    </div>
+
+    <div id="docCount">
+        Number of Documents returned: {{ docCount }}
+        <div id="underline"></div>
+    </div>
+
+    <ol>
+        {% for document in documents %}
+            <li id="doc">
+                <div>
+                    <input name="docCheckbox" type="checkbox" value="{{ document.id }}"/>
+                    <a href="{{ document.url }}">{{ document.title }}</a>
+                </div>
             </li>
         {% endfor %}
     </ol>
